# ecgmonitor

./: build_test.bat  build_unit_test.bat  f1.md  f2.md  f3.md  f4.md  f5.md  f5_testadc.md  f6_chi_doluong.md
ecg_monitor/: CMakeLists.txt  CRITIQUE.md  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
ecg_monitor/components/ecg_adc/: CMakeLists.txt  Kconfig  README.md  ecg_adc.c  ecg_adc.h  test_ecg_adc.c
ecg_monitor/components/ecg_adc/test/: CMakeLists.txt  test_ecg_adc.c
ecg_monitor/components/ecg_common/: CMakeLists.txt  README.md  ecg_common.h
ecg_monitor/components/ecg_display/: CMakeLists.txt  README.md  ecg_display.c  ecg_display.h
ecg_monitor/components/ecg_hr_detect/: CMakeLists.txt  README.md  ecg_hr_detect.c  ecg_hr_detect.h
ecg_monitor/components/ecg_inference/: CMakeLists.txt  README.md  ecg_inference.c  ecg_inference.h
ecg_monitor/components/ecg_network/: CMakeLists.txt  README.md  ecg_network.c  ecg_network.h
ecg_monitor/main/: CMakeLists.txt  Kconfig.projbuild  README.md  ecg_serial_debug.c  ecg_serial_debug.h  main.c
ecg_monitor/web/: index.html
